<resources>
    <string name="app_name">MyLaundry</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">My Account</string>
    <string name="todo">TODO</string>
    <string name="padding">Padding</string>
    <string name="textview">TextView</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="book">BOOK</string>
    <string name="today">Today</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
</resources>